infrastructure/base/traefik/middleware-public-whitelist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: public-whitelist
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      - 10.0.0.1/32
