infrastructure/base/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.wc`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
