infrastructure/base/traefik/ingressroute-mealie.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  tls:
    secretName: mealie-tls
  routes:
    - match: Host(`mealie.wc`)
      kind: Rule
      services:
        - name: mealie-service
          port: 9000
